# protonfs

./: .bash_local  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: compute_next_version.py  finalize_changelog.py  release_gate.sh  repin_proton_drive.py  sync_readme.py
.github/status/: collect.py  render.py  template.svg.j2  update.sh
.github/status/data/: ci.json  docs.json  project.json  proton_drive.json
.github/workflows/: auto-release.yml  bug-investigation.yml  ci.yml  docs.yml  proton-drive-badge.yml  release.yml  version-badge.yml
docs/: conf.py  guarantees.rst  index.rst  stability.rst  upgrading.rst
docs/_ext/: command_xref.py
docs/_shared/: overview.rst
docs/_static/: custom.css
docs/api/: index.rst
docs/api/protonfs/: modules.rst  protonfs.cli.rst  protonfs.rst
docs/getting-started/: guide.rst  index.rst  syncing.rst
docs/reference/: commands.rst  config.rst  index.rst
src/protonfs/: __init__.py  argv.py  batching.py  cli.py  config.py  context.py  diff.py  drive.py  ignore.py  index.py  install.py  lfs.py  localscan.py  locking.py  logs.py  migrations.py  refreshstate.py  reporting.py  secretservice.py
src/protonfs/commands/: auth.py  completions.py  config.py  deinit.py  doctor.py  ls.py  offload.py  pull.py  push.py  refresh.py  restore.py  rm.py  setup.py  status.py  storage_viz.py  trash.py  upgrade.py
tests/: conftest.py  test_argv.py  test_batching.py  test_changelog_finalize.py  test_cli.py  test_cli_config.py  test_cli_surface.py  test_completions.py  test_config.py  test_context.py  test_diff.py  test_drive.py  test_ignore.py  test_index.py  test_install.py  test_lfs.py  test_live_integration.py  test_live_workflows.py  test_localscan.py  test_locking.py  test_logs.py  test_migrations.py  test_refreshstate.py  test_reporting.py  test_secretservice.py  test_sync_readme.py  test_versioning.py
tests/commands/: test_auth.py  test_cli_bodies.py  test_cli_errors.py  test_config_cmd.py  test_deinit.py  test_doctor.py  test_ls.py  test_offload.py  test_pull.py  test_push.py  test_refresh.py  test_restore.py  test_resumable.py  test_rm.py  test_setup.py  test_status.py  test_storage_viz.py  test_trash.py  test_upgrade.py
tests/docs/: test_command_xref.py
