[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "protonfs"
description = "Sync a local directory tree with Proton Drive via the official Proton Drive CLI, with conflict-aware push/pull and a local sync manifest."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Will Roscoe", email = "protonfs.git@willroscoe.uk" }]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pathspec>=0.12",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
    "License :: Other/Proprietary License",
]

[project.urls]
Homepage = "https://github.com/will-roscoe/protonfs"
Issues = "https://github.com/will-roscoe/protonfs/issues"
Documentation = "https://will-roscoe.github.io/protonfs/"


[project.scripts]
protonfs = "protonfs.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pytest-cov>=5",
    "genbadge[coverage]>=1.1",
    "interrogate>=1.7",
    "pre-commit>=3",
]
docs = [
    # sphinx-click 6.2.0 (latest) is incompatible with Sphinx 9 (its `mock()` call hits a
    # module, not a callable), so pin to Sphinx 8.x. Native `.. confval::` needs >= 8.1.
    # sphinx-autodoc-typehints must track the same range (its latest requires Sphinx >= 9.1).
    "sphinx>=8.1,<9",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints<3.2",
    "sphinx-copybutton",
    "sphinx-tippy",  # client-side hover previews on cross-references (works on GitHub Pages)
    "sphinx-click",  # autodoc for the Click CLI (command/option/envvar directives)
    "furo",
]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.wheel]
packages = ["src/protonfs"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.interrogate]
# Docstring-coverage gate (issue: raise docs coverage for 1.0). Tests are excluded
# entirely -- they document themselves through descriptive names + inline comments.
fail-under = 80
exclude = ["tests", "docs", ".github", "build"]
# Empty package __init__.py files and closure/nested helpers carry no public
# contract worth a docstring; __init__ methods are documented at the class level.
ignore-init-module = true
ignore-init-method = true
ignore-nested-functions = true
ignore-magic = true
ignore-overloaded-functions = true
ignore-property-decorators = true
verbose = 1
